# shatter_buffer

./: CMakeLists.txt  README.md
src/: shtr_buf.c  shtr_buf.h
test/: test_shatter.c
